deploy: a4e040138a066fb8ff1940776cfc6e0fdda5d69a

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce055c48",
+   "id": "2fae6840",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7eff2e7",
+   "id": "e946c08a",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80db9381",
+   "id": "1da7ff21",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "754e66f4",
+   "id": "bfe7ae9f",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a953c8",
+   "id": "cc8d7689",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9e66c6",
+   "id": "cf775d42",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1ef87366",
+   "id": "b9a44190",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:06.353208Z",
-     "iopub.status.busy": "2025-02-04T10:30:06.352815Z",
-     "iopub.status.idle": "2025-02-04T10:30:09.658839Z",
-     "shell.execute_reply": "2025-02-04T10:30:09.658228Z"
+     "iopub.execute_input": "2025-02-04T10:36:52.184251Z",
+     "iopub.status.busy": "2025-02-04T10:36:52.184081Z",
+     "iopub.status.idle": "2025-02-04T10:36:55.157922Z",
+     "shell.execute_reply": "2025-02-04T10:36:55.157335Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94bd40c1",
+   "id": "caff2a50",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b672afab",
+   "id": "1e5b28b6",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e35002f0",
+   "id": "c5c82828",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5f9fe5f",
+   "id": "5b15f08c",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71d42eed",
+   "id": "6bc0c097",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f8e3306",
+   "id": "42d384d2",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b05335",
+   "id": "70dc80da",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5e2738",
+   "id": "94a64adb",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "871deadd",
+   "id": "95301dbe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:09.661222Z",
-     "iopub.status.busy": "2025-02-04T10:30:09.660687Z",
-     "iopub.status.idle": "2025-02-04T10:30:11.783742Z",
-     "shell.execute_reply": "2025-02-04T10:30:11.783214Z"
+     "iopub.execute_input": "2025-02-04T10:36:55.160226Z",
+     "iopub.status.busy": "2025-02-04T10:36:55.159725Z",
+     "iopub.status.idle": "2025-02-04T10:36:57.051746Z",
+     "shell.execute_reply": "2025-02-04T10:36:57.051222Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d41d9dc7",
+   "id": "057cbb66",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d8f8036",
+   "id": "8cd4c709",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:11.785567Z",
-     "iopub.status.busy": "2025-02-04T10:30:11.785391Z",
-     "iopub.status.idle": "2025-02-04T10:30:11.789079Z",
-     "shell.execute_reply": "2025-02-04T10:30:11.788585Z"
+     "iopub.execute_input": "2025-02-04T10:36:57.053657Z",
+     "iopub.status.busy": "2025-02-04T10:36:57.053292Z",
+     "iopub.status.idle": "2025-02-04T10:36:57.056950Z",
+     "shell.execute_reply": "2025-02-04T10:36:57.056358Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60b5c69c",
+   "id": "ce8223d5",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1180f3ec",
+   "id": "3770a59e",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "694c496e",
+   "id": "b0f31d9e",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3c82ac",
+   "id": "771fbb4d",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "48466d0a",
+   "id": "a23ba7e9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:11.790992Z",
-     "iopub.status.busy": "2025-02-04T10:30:11.790643Z",
-     "iopub.status.idle": "2025-02-04T10:30:11.836248Z",
-     "shell.execute_reply": "2025-02-04T10:30:11.835689Z"
+     "iopub.execute_input": "2025-02-04T10:36:57.058743Z",
+     "iopub.status.busy": "2025-02-04T10:36:57.058434Z",
+     "iopub.status.idle": "2025-02-04T10:36:57.100818Z",
+     "shell.execute_reply": "2025-02-04T10:36:57.100201Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6885d57b",
+   "id": "a5009f4b",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c6960bac",
+   "id": "61264250",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:11.838386Z",
-     "iopub.status.busy": "2025-02-04T10:30:11.837944Z",
-     "iopub.status.idle": "2025-02-04T10:30:11.910794Z",
-     "shell.execute_reply": "2025-02-04T10:30:11.910229Z"
+     "iopub.execute_input": "2025-02-04T10:36:57.102789Z",
+     "iopub.status.busy": "2025-02-04T10:36:57.102338Z",
+     "iopub.status.idle": "2025-02-04T10:36:57.167558Z",
+     "shell.execute_reply": "2025-02-04T10:36:57.167040Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e2e0fa4",
+   "id": "023967ec",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1da5ad4",
+   "id": "beac3460",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f38ebf39",
+   "id": "7530d032",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:11.912738Z",
-     "iopub.status.busy": "2025-02-04T10:30:11.912411Z",
-     "iopub.status.idle": "2025-02-04T10:30:11.942205Z",
-     "shell.execute_reply": "2025-02-04T10:30:11.941621Z"
+     "iopub.execute_input": "2025-02-04T10:36:57.169317Z",
+     "iopub.status.busy": "2025-02-04T10:36:57.169135Z",
+     "iopub.status.idle": "2025-02-04T10:36:57.194575Z",
+     "shell.execute_reply": "2025-02-04T10:36:57.194021Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d43952",
+   "id": "543ec6fa",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d33de0a",
+   "id": "5330ed75",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4158c6f6",
+   "id": "3ad2e8c2",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5716204e",
+   "id": "5c164145",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1220d0a9",
+   "id": "28ef9603",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f60924e1",
+   "id": "b053643c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:11.944352Z",
-     "iopub.status.busy": "2025-02-04T10:30:11.943917Z",
-     "iopub.status.idle": "2025-02-04T10:30:11.948127Z",
-     "shell.execute_reply": "2025-02-04T10:30:11.947499Z"
+     "iopub.execute_input": "2025-02-04T10:36:57.196482Z",
+     "iopub.status.busy": "2025-02-04T10:36:57.196281Z",
+     "iopub.status.idle": "2025-02-04T10:36:57.200703Z",
+     "shell.execute_reply": "2025-02-04T10:36:57.200061Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08f79efd",
+   "id": "489d79d7",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "43077679",
+   "id": "1d65392a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:11.950109Z",
-     "iopub.status.busy": "2025-02-04T10:30:11.949740Z",
-     "iopub.status.idle": "2025-02-04T10:30:11.952753Z",
-     "shell.execute_reply": "2025-02-04T10:30:11.952292Z"
+     "iopub.execute_input": "2025-02-04T10:36:57.202306Z",
+     "iopub.status.busy": "2025-02-04T10:36:57.202133Z",
+     "iopub.status.idle": "2025-02-04T10:36:57.205145Z",
+     "shell.execute_reply": "2025-02-04T10:36:57.204470Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b51a369",
+   "id": "21ae7228",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b878de31",
+   "id": "d0c37fb5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:11.954548Z",
-     "iopub.status.busy": "2025-02-04T10:30:11.954225Z",
-     "iopub.status.idle": "2025-02-04T10:30:14.632932Z",
-     "shell.execute_reply": "2025-02-04T10:30:14.632330Z"
+     "iopub.execute_input": "2025-02-04T10:36:57.206934Z",
+     "iopub.status.busy": "2025-02-04T10:36:57.206623Z",
+     "iopub.status.idle": "2025-02-04T10:36:59.742307Z",
+     "shell.execute_reply": "2025-02-04T10:36:59.741713Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff46625b",
+   "id": "33f447a4",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d4c7445",
+   "id": "d520ceb7",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8f1e338",
+   "id": "afed1fce",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f72827e",
+   "id": "28907e37",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8af6367f",
+   "id": "2847cf42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:14.634958Z",
-     "iopub.status.busy": "2025-02-04T10:30:14.634765Z",
-     "iopub.status.idle": "2025-02-04T10:30:14.638487Z",
-     "shell.execute_reply": "2025-02-04T10:30:14.637928Z"
+     "iopub.execute_input": "2025-02-04T10:36:59.744582Z",
+     "iopub.status.busy": "2025-02-04T10:36:59.744133Z",
+     "iopub.status.idle": "2025-02-04T10:36:59.747742Z",
+     "shell.execute_reply": "2025-02-04T10:36:59.747140Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb8bc6149a0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f424fef3e20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e21ebaf",
+   "id": "d3aa1a56",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a568857",
+   "id": "488781a7",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9489c7a0",
+   "id": "85b2ef01",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "003894cf",
+   "id": "646d6249",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b165af9e",
+   "id": "0a2fffe1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:14.640558Z",
-     "iopub.status.busy": "2025-02-04T10:30:14.640209Z",
-     "iopub.status.idle": "2025-02-04T10:30:14.643204Z",
-     "shell.execute_reply": "2025-02-04T10:30:14.642576Z"
+     "iopub.execute_input": "2025-02-04T10:36:59.749816Z",
+     "iopub.status.busy": "2025-02-04T10:36:59.749499Z",
+     "iopub.status.idle": "2025-02-04T10:36:59.752363Z",
+     "shell.execute_reply": "2025-02-04T10:36:59.751900Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e6288660",
+   "id": "244e72d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:30:14.645100Z",
-     "iopub.status.busy": "2025-02-04T10:30:14.644672Z",
-     "iopub.status.idle": "2025-02-04T10:30:15.724987Z",
-     "shell.execute_reply": "2025-02-04T10:30:15.724372Z"
+     "iopub.execute_input": "2025-02-04T10:36:59.754318Z",
+     "iopub.status.busy": "2025-02-04T10:36:59.753985Z",
+     "iopub.status.idle": "2025-02-04T10:37:00.804312Z",
+     "shell.execute_reply": "2025-02-04T10:37:00.803726Z"
     }
    },
    "outputs": [
