deploy: 6faf74100f69825ba7bd7d0ee66b18c9f3bef9cd

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2fae6840",
+   "id": "22170af0",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e946c08a",
+   "id": "5c385cf4",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1da7ff21",
+   "id": "0ae60b52",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe7ae9f",
+   "id": "9c626950",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc8d7689",
+   "id": "80ec6229",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf775d42",
+   "id": "b09198e0",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b9a44190",
+   "id": "c33e019d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:52.184251Z",
-     "iopub.status.busy": "2025-02-04T10:36:52.184081Z",
-     "iopub.status.idle": "2025-02-04T10:36:55.157922Z",
-     "shell.execute_reply": "2025-02-04T10:36:55.157335Z"
+     "iopub.execute_input": "2025-02-04T11:19:01.825898Z",
+     "iopub.status.busy": "2025-02-04T11:19:01.825716Z",
+     "iopub.status.idle": "2025-02-04T11:19:04.862693Z",
+     "shell.execute_reply": "2025-02-04T11:19:04.862080Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caff2a50",
+   "id": "5dbd5f42",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e5b28b6",
+   "id": "231941ab",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c82828",
+   "id": "502ed8a9",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b15f08c",
+   "id": "8b08cd0b",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc0c097",
+   "id": "531dc162",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d384d2",
+   "id": "7c0f5f27",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70dc80da",
+   "id": "f9bd6283",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a64adb",
+   "id": "a234b6dd",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "95301dbe",
+   "id": "075e6e47",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:55.160226Z",
-     "iopub.status.busy": "2025-02-04T10:36:55.159725Z",
-     "iopub.status.idle": "2025-02-04T10:36:57.051746Z",
-     "shell.execute_reply": "2025-02-04T10:36:57.051222Z"
+     "iopub.execute_input": "2025-02-04T11:19:04.864980Z",
+     "iopub.status.busy": "2025-02-04T11:19:04.864541Z",
+     "iopub.status.idle": "2025-02-04T11:19:06.821108Z",
+     "shell.execute_reply": "2025-02-04T11:19:06.820594Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057cbb66",
+   "id": "73082437",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8cd4c709",
+   "id": "0f432041",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:57.053657Z",
-     "iopub.status.busy": "2025-02-04T10:36:57.053292Z",
-     "iopub.status.idle": "2025-02-04T10:36:57.056950Z",
-     "shell.execute_reply": "2025-02-04T10:36:57.056358Z"
+     "iopub.execute_input": "2025-02-04T11:19:06.823074Z",
+     "iopub.status.busy": "2025-02-04T11:19:06.822694Z",
+     "iopub.status.idle": "2025-02-04T11:19:06.826325Z",
+     "shell.execute_reply": "2025-02-04T11:19:06.825709Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce8223d5",
+   "id": "de7c5646",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3770a59e",
+   "id": "3b532493",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0f31d9e",
+   "id": "c30c0cc1",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "771fbb4d",
+   "id": "ddfc7d71",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a23ba7e9",
+   "id": "619a40cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:57.058743Z",
-     "iopub.status.busy": "2025-02-04T10:36:57.058434Z",
-     "iopub.status.idle": "2025-02-04T10:36:57.100818Z",
-     "shell.execute_reply": "2025-02-04T10:36:57.100201Z"
+     "iopub.execute_input": "2025-02-04T11:19:06.828229Z",
+     "iopub.status.busy": "2025-02-04T11:19:06.827821Z",
+     "iopub.status.idle": "2025-02-04T11:19:06.871911Z",
+     "shell.execute_reply": "2025-02-04T11:19:06.871333Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5009f4b",
+   "id": "c60edd3c",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "61264250",
+   "id": "f73ba47d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:57.102789Z",
-     "iopub.status.busy": "2025-02-04T10:36:57.102338Z",
-     "iopub.status.idle": "2025-02-04T10:36:57.167558Z",
-     "shell.execute_reply": "2025-02-04T10:36:57.167040Z"
+     "iopub.execute_input": "2025-02-04T11:19:06.873836Z",
+     "iopub.status.busy": "2025-02-04T11:19:06.873499Z",
+     "iopub.status.idle": "2025-02-04T11:19:06.939541Z",
+     "shell.execute_reply": "2025-02-04T11:19:06.938961Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "023967ec",
+   "id": "7446e56f",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beac3460",
+   "id": "07aac507",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7530d032",
+   "id": "cbb06726",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:57.169317Z",
-     "iopub.status.busy": "2025-02-04T10:36:57.169135Z",
-     "iopub.status.idle": "2025-02-04T10:36:57.194575Z",
-     "shell.execute_reply": "2025-02-04T10:36:57.194021Z"
+     "iopub.execute_input": "2025-02-04T11:19:06.941668Z",
+     "iopub.status.busy": "2025-02-04T11:19:06.941198Z",
+     "iopub.status.idle": "2025-02-04T11:19:06.968445Z",
+     "shell.execute_reply": "2025-02-04T11:19:06.967952Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "543ec6fa",
+   "id": "e8aceed4",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5330ed75",
+   "id": "cfaef871",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad2e8c2",
+   "id": "77d0fa68",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c164145",
+   "id": "a3e17ae4",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ef9603",
+   "id": "6ca54053",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b053643c",
+   "id": "42da1aa2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:57.196482Z",
-     "iopub.status.busy": "2025-02-04T10:36:57.196281Z",
-     "iopub.status.idle": "2025-02-04T10:36:57.200703Z",
-     "shell.execute_reply": "2025-02-04T10:36:57.200061Z"
+     "iopub.execute_input": "2025-02-04T11:19:06.970527Z",
+     "iopub.status.busy": "2025-02-04T11:19:06.970133Z",
+     "iopub.status.idle": "2025-02-04T11:19:06.974208Z",
+     "shell.execute_reply": "2025-02-04T11:19:06.973668Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "489d79d7",
+   "id": "0fd7a502",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1d65392a",
+   "id": "1c34b7d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:57.202306Z",
-     "iopub.status.busy": "2025-02-04T10:36:57.202133Z",
-     "iopub.status.idle": "2025-02-04T10:36:57.205145Z",
-     "shell.execute_reply": "2025-02-04T10:36:57.204470Z"
+     "iopub.execute_input": "2025-02-04T11:19:06.975862Z",
+     "iopub.status.busy": "2025-02-04T11:19:06.975701Z",
+     "iopub.status.idle": "2025-02-04T11:19:06.978518Z",
+     "shell.execute_reply": "2025-02-04T11:19:06.978031Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ae7228",
+   "id": "941f3b81",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d0c37fb5",
+   "id": "d6473057",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:57.206934Z",
-     "iopub.status.busy": "2025-02-04T10:36:57.206623Z",
-     "iopub.status.idle": "2025-02-04T10:36:59.742307Z",
-     "shell.execute_reply": "2025-02-04T10:36:59.741713Z"
+     "iopub.execute_input": "2025-02-04T11:19:06.980080Z",
+     "iopub.status.busy": "2025-02-04T11:19:06.979905Z",
+     "iopub.status.idle": "2025-02-04T11:19:09.486830Z",
+     "shell.execute_reply": "2025-02-04T11:19:09.486241Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f447a4",
+   "id": "bab14c44",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d520ceb7",
+   "id": "09408229",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afed1fce",
+   "id": "9432f886",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28907e37",
+   "id": "6d1c50ab",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2847cf42",
+   "id": "7264dff5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:59.744582Z",
-     "iopub.status.busy": "2025-02-04T10:36:59.744133Z",
-     "iopub.status.idle": "2025-02-04T10:36:59.747742Z",
-     "shell.execute_reply": "2025-02-04T10:36:59.747140Z"
+     "iopub.execute_input": "2025-02-04T11:19:09.489018Z",
+     "iopub.status.busy": "2025-02-04T11:19:09.488597Z",
+     "iopub.status.idle": "2025-02-04T11:19:09.492119Z",
+     "shell.execute_reply": "2025-02-04T11:19:09.491548Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f424fef3e20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fcf56dcbe20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3aa1a56",
+   "id": "3f25c869",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "488781a7",
+   "id": "a90662f7",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b2ef01",
+   "id": "ef178255",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646d6249",
+   "id": "d4064039",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0a2fffe1",
+   "id": "b6ba8249",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:59.749816Z",
-     "iopub.status.busy": "2025-02-04T10:36:59.749499Z",
-     "iopub.status.idle": "2025-02-04T10:36:59.752363Z",
-     "shell.execute_reply": "2025-02-04T10:36:59.751900Z"
+     "iopub.execute_input": "2025-02-04T11:19:09.494119Z",
+     "iopub.status.busy": "2025-02-04T11:19:09.493772Z",
+     "iopub.status.idle": "2025-02-04T11:19:09.496773Z",
+     "shell.execute_reply": "2025-02-04T11:19:09.496303Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "244e72d4",
+   "id": "665723d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:36:59.754318Z",
-     "iopub.status.busy": "2025-02-04T10:36:59.753985Z",
-     "iopub.status.idle": "2025-02-04T10:37:00.804312Z",
-     "shell.execute_reply": "2025-02-04T10:37:00.803726Z"
+     "iopub.execute_input": "2025-02-04T11:19:09.498437Z",
+     "iopub.status.busy": "2025-02-04T11:19:09.498096Z",
+     "iopub.status.idle": "2025-02-04T11:19:10.544963Z",
+     "shell.execute_reply": "2025-02-04T11:19:10.544405Z"
     }
    },
    "outputs": [
