--- a/tutorials/g_td_sim.ipynb
+++ b/tutorials/g_td_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "30087ca3",
+   "id": "35058414",
    "metadata": {},
    "source": [
     "# Time-Domain simulations\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf027ae",
+   "id": "b1127193",
    "metadata": {},
    "source": [
     "We introduce time-domain simulations, which are based on GRANAD's default master equation"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a81eea5",
+   "id": "b2898158",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(t) = -i [H[t,\\rho(t)], \\rho] + \\mathcal{D}[t, \\rho]$$"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7f86578",
+   "id": "b9ac51a8",
    "metadata": {},
    "source": [
     "The Hamiltonian is non-linear in the sense that the Coulomb term depends on the charge electronic distribution given by the time-dependent density matrix:"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96ef0928",
+   "id": "38957da3",
    "metadata": {},
    "source": [
     "$$H[t,\\rho(t)] = h^{0} + \\vec{E} \\vec{P} + C(\\rho(t) - \\rho^{0})$$"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1365b2dd",
+   "id": "98ffaeaa",
    "metadata": {},
    "source": [
     "where "
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "473bb448",
+   "id": "ca446973",
    "metadata": {},
    "source": [
     "1. $h^{0}$ is the single-particle tight-binding Hamiltonian constructed from localized orbitals.\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb153b39",
+   "id": "bde821dd",
    "metadata": {},
    "source": [
     "This expression is the dipole-gauge expression for the Hamiltonian including an external electric field $\\vec{E}$."
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5427b591",
+   "id": "814a1bf3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f9d45d",
+   "id": "bcc80883",
    "metadata": {},
    "source": [
     "You can compute multiple observables in one simulation run"
@@ -87,13 +87,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8fc993cc",
+   "id": "90e648a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:10.187005Z",
-     "iopub.status.busy": "2025-02-04T10:38:10.186829Z",
-     "iopub.status.idle": "2025-02-04T10:38:18.743186Z",
-     "shell.execute_reply": "2025-02-04T10:38:18.742684Z"
+     "iopub.execute_input": "2025-02-04T11:20:20.807398Z",
+     "iopub.status.busy": "2025-02-04T11:20:20.807227Z",
+     "iopub.status.idle": "2025-02-04T11:20:29.399598Z",
+     "shell.execute_reply": "2025-02-04T11:20:29.398988Z"
     }
    },
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8930db",
+   "id": "95ba6afc",
    "metadata": {},
    "source": [
     "The result object stores this information. Operators are concatenated in the order you passed them in."
@@ -149,13 +149,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b68507cd",
+   "id": "8d0b99d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:18.745128Z",
-     "iopub.status.busy": "2025-02-04T10:38:18.744759Z",
-     "iopub.status.idle": "2025-02-04T10:38:18.748306Z",
-     "shell.execute_reply": "2025-02-04T10:38:18.747699Z"
+     "iopub.execute_input": "2025-02-04T11:20:29.401768Z",
+     "iopub.status.busy": "2025-02-04T11:20:29.401264Z",
+     "iopub.status.idle": "2025-02-04T11:20:29.405064Z",
+     "shell.execute_reply": "2025-02-04T11:20:29.404333Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "072ec138",
+   "id": "a85e4659",
    "metadata": {},
    "source": [
     "The induced dipole moment at timestep 10 is given by"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f8459da7",
+   "id": "dfab2d2b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:18.750157Z",
-     "iopub.status.busy": "2025-02-04T10:38:18.749817Z",
-     "iopub.status.idle": "2025-02-04T10:38:18.774427Z",
-     "shell.execute_reply": "2025-02-04T10:38:18.773846Z"
+     "iopub.execute_input": "2025-02-04T11:20:29.406756Z",
+     "iopub.status.busy": "2025-02-04T11:20:29.406577Z",
+     "iopub.status.idle": "2025-02-04T11:20:29.430766Z",
+     "shell.execute_reply": "2025-02-04T11:20:29.430256Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55678dd0",
+   "id": "c57f2188",
    "metadata": {},
    "source": [
     "Induced current at timestep 10"
@@ -217,13 +217,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6d1ffe1d",
+   "id": "f55a09ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:18.776170Z",
-     "iopub.status.busy": "2025-02-04T10:38:18.775990Z",
-     "iopub.status.idle": "2025-02-04T10:38:18.779970Z",
-     "shell.execute_reply": "2025-02-04T10:38:18.779441Z"
+     "iopub.execute_input": "2025-02-04T11:20:29.432685Z",
+     "iopub.status.busy": "2025-02-04T11:20:29.432501Z",
+     "iopub.status.idle": "2025-02-04T11:20:29.436527Z",
+     "shell.execute_reply": "2025-02-04T11:20:29.436026Z"
     },
     "lines_to_next_cell": 2
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "160a96cb",
+   "id": "79e2708c",
    "metadata": {},
    "source": [
     "We can access the Fourier transform as"
@@ -252,13 +252,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "03201adf",
+   "id": "3e7679d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:18.781695Z",
-     "iopub.status.busy": "2025-02-04T10:38:18.781520Z",
-     "iopub.status.idle": "2025-02-04T10:38:19.148218Z",
-     "shell.execute_reply": "2025-02-04T10:38:19.147716Z"
+     "iopub.execute_input": "2025-02-04T11:20:29.438076Z",
+     "iopub.status.busy": "2025-02-04T11:20:29.437915Z",
+     "iopub.status.idle": "2025-02-04T11:20:29.815007Z",
+     "shell.execute_reply": "2025-02-04T11:20:29.814516Z"
     }
    },
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f54e7be4",
+   "id": "fd90d4fb",
    "metadata": {},
    "source": [
     "The incident field is accessible via result.td_illumination, e.g.,"
@@ -279,13 +279,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "176a2c27",
+   "id": "62680357",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:19.150146Z",
-     "iopub.status.busy": "2025-02-04T10:38:19.149959Z",
-     "iopub.status.idle": "2025-02-04T10:38:19.153425Z",
-     "shell.execute_reply": "2025-02-04T10:38:19.152848Z"
+     "iopub.execute_input": "2025-02-04T11:20:29.817278Z",
+     "iopub.status.busy": "2025-02-04T11:20:29.816848Z",
+     "iopub.status.idle": "2025-02-04T11:20:29.820400Z",
+     "shell.execute_reply": "2025-02-04T11:20:29.819861Z"
     }
    },
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa5ca2d0",
+   "id": "52841bdf",
    "metadata": {},
    "source": [
     "# Continuity equation example"
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0897a0b",
+   "id": "192bdf8c",
    "metadata": {},
    "source": [
     "From the classical continuity equation for the charge and current density $\\rho(\\vec{r},t), \\vec{j}(\\vec{r},t)$ and dipole moment density $\\vec{p}(\\vec{r},t)$, we have"
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a368155a",
+   "id": "0dcc5e62",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(\\vec{r}, t) = -\\nabla \\vec{j}(\\vec{r}, t) = \\nabla \\dot{\\vec{p}}(\\vec{r}, t) \\implies \\dot{\\vec{p}}(\\vec{r},t) = \\vec{j}(\\vec{r},t)$$"
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b954678",
+   "id": "91478fe7",
    "metadata": {},
    "source": [
     "After Fourier transformation, we obtain"
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55fe5e24",
+   "id": "b1a44b9d",
    "metadata": {},
    "source": [
     "$$-i\\omega \\vec{p}(\\vec{r}, \\omega) = \\vec{j}(\\vec{r}, \\omega)$$"
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00db31a6",
+   "id": "60429528",
    "metadata": {},
    "source": [
     "Its integrated form is given by"
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ed16ae",
+   "id": "f9322512",
    "metadata": {},
    "source": [
     "$$\\sum_i \\dot{\\vec{p}}(\\vec{r}_i,t) = \\dot{\\vec{p}}(t) = \\sum_i d\\vec{r} \\vec{j}(\\vec{r}_i,t) =  \\vec{j}(t)$$ "
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a25b6fb",
+   "id": "e7a58992",
    "metadata": {},
    "source": [
     "$\\vec{j}(t)$ and $\\vec{p}(t)$ are the total current and dipole moment respectively and we have taken the spatially discrete basis into account. We can obtain operator expectation values directly from the time-domain simulations. The continuity equation above can be verified as follows"
@@ -368,13 +368,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "44710cc4",
+   "id": "44f86dc1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:19.155343Z",
-     "iopub.status.busy": "2025-02-04T10:38:19.155014Z",
-     "iopub.status.idle": "2025-02-04T10:38:19.562738Z",
-     "shell.execute_reply": "2025-02-04T10:38:19.562123Z"
+     "iopub.execute_input": "2025-02-04T11:20:29.822500Z",
+     "iopub.status.busy": "2025-02-04T11:20:29.822126Z",
+     "iopub.status.idle": "2025-02-04T11:20:30.231475Z",
+     "shell.execute_reply": "2025-02-04T11:20:30.230872Z"
     },
     "lines_to_next_cell": 2
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "935c1ff0",
+   "id": "8d39b1e7",
    "metadata": {},
    "source": [
     "## Density matrices"
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1444f8aa",
+   "id": "bdf7d455",
    "metadata": {},
    "source": [
     "If we want to find the time-dependent density matrices, we can omit the operator list. The result object then contains a one-element list."
@@ -421,13 +421,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "84e76f49",
+   "id": "c9d6decb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:19.564550Z",
-     "iopub.status.busy": "2025-02-04T10:38:19.564346Z",
-     "iopub.status.idle": "2025-02-04T10:38:22.181435Z",
-     "shell.execute_reply": "2025-02-04T10:38:22.180899Z"
+     "iopub.execute_input": "2025-02-04T11:20:30.233349Z",
+     "iopub.status.busy": "2025-02-04T11:20:30.233159Z",
+     "iopub.status.idle": "2025-02-04T11:20:32.882309Z",
+     "shell.execute_reply": "2025-02-04T11:20:32.881766Z"
     }
    },
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c0b8dea",
+   "id": "7c77ce18",
    "metadata": {},
    "source": [
     "We can convert them to energy basis"
@@ -477,13 +477,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "177b644e",
+   "id": "e0452f91",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:22.183573Z",
-     "iopub.status.busy": "2025-02-04T10:38:22.183131Z",
-     "iopub.status.idle": "2025-02-04T10:38:24.103132Z",
-     "shell.execute_reply": "2025-02-04T10:38:24.102533Z"
+     "iopub.execute_input": "2025-02-04T11:20:32.884334Z",
+     "iopub.status.busy": "2025-02-04T11:20:32.883984Z",
+     "iopub.status.idle": "2025-02-04T11:20:34.818009Z",
+     "shell.execute_reply": "2025-02-04T11:20:34.817495Z"
     }
    },
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e585494",
+   "id": "0d33e912",
    "metadata": {},
    "source": [
     "## Occupations"
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5f7b7ab",
+   "id": "fcf038ad",
    "metadata": {},
    "source": [
     "To reduce memory consumption, we can extract only the site occupations to avoid storing the entire stack of density matices in memory."
@@ -519,13 +519,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2e49f486",
+   "id": "55e01b9c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:24.105051Z",
-     "iopub.status.busy": "2025-02-04T10:38:24.104734Z",
-     "iopub.status.idle": "2025-02-04T10:38:26.681874Z",
-     "shell.execute_reply": "2025-02-04T10:38:26.681343Z"
+     "iopub.execute_input": "2025-02-04T11:20:34.819903Z",
+     "iopub.status.busy": "2025-02-04T11:20:34.819719Z",
+     "iopub.status.idle": "2025-02-04T11:20:37.404928Z",
+     "shell.execute_reply": "2025-02-04T11:20:37.404341Z"
     }
    },
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "818a2402",
+   "id": "0364d1e2",
    "metadata": {},
    "source": [
     "Further reduction of the memory consumption can be controlled by the grid argument, which describes the density of the time domain sampling grid, explained in the API section on the `master_equation` method."
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade3981d",
+   "id": "34de6646",
    "metadata": {},
    "source": [
     "## Energy occupations"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e1aad0",
+   "id": "a6529f5f",
    "metadata": {},
    "source": [
     "Similarly to site occupations, energy occupations can also be obtained from the time-domain simulations."
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da6943f1",
+   "id": "9865ba72",
    "metadata": {},
    "source": [
     "*Warning*: this introduces additional cubic complexity "
@@ -599,13 +599,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "13fc290b",
+   "id": "71344638",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:26.683979Z",
-     "iopub.status.busy": "2025-02-04T10:38:26.683603Z",
-     "iopub.status.idle": "2025-02-04T10:38:31.274628Z",
-     "shell.execute_reply": "2025-02-04T10:38:31.274093Z"
+     "iopub.execute_input": "2025-02-04T11:20:37.406920Z",
+     "iopub.status.busy": "2025-02-04T11:20:37.406590Z",
+     "iopub.status.idle": "2025-02-04T11:20:42.103472Z",
+     "shell.execute_reply": "2025-02-04T11:20:42.102995Z"
     }
    },
    "outputs": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4c30dc8",
+   "id": "d2c75a10",
    "metadata": {},
    "source": [
     "## Initially excited states"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e44a1d8",
+   "id": "26085320",
    "metadata": {},
    "source": [
     "GRANAD allows to set initially excited states by specifying the single-particle transition in the density matrix as follows"
@@ -663,13 +663,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a6095a2c",
+   "id": "d68c2a41",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:31.276592Z",
-     "iopub.status.busy": "2025-02-04T10:38:31.276218Z",
-     "iopub.status.idle": "2025-02-04T10:38:33.011825Z",
-     "shell.execute_reply": "2025-02-04T10:38:33.011244Z"
+     "iopub.execute_input": "2025-02-04T11:20:42.105568Z",
+     "iopub.status.busy": "2025-02-04T11:20:42.105213Z",
+     "iopub.status.idle": "2025-02-04T11:20:43.805982Z",
+     "shell.execute_reply": "2025-02-04T11:20:43.805381Z"
     }
    },
    "outputs": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f3c730",
+   "id": "0917867b",
    "metadata": {},
    "source": [
     "In case of degeneracies, GRANAD distributes electrons equally among all degenerate energy levels, as demonstrated in the figure above."
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d20f76b",
+   "id": "a8f390cb",
    "metadata": {},
    "source": [
     "## Combinations"
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418d0b8f",
+   "id": "8e3ad33b",
    "metadata": {},
    "source": [
     "We can also extract multiple quantities at the same time"
@@ -716,13 +716,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2a059c92",
+   "id": "f1043198",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:33.013890Z",
-     "iopub.status.busy": "2025-02-04T10:38:33.013551Z",
-     "iopub.status.idle": "2025-02-04T10:38:35.882348Z",
-     "shell.execute_reply": "2025-02-04T10:38:35.881846Z"
+     "iopub.execute_input": "2025-02-04T11:20:43.808017Z",
+     "iopub.status.busy": "2025-02-04T11:20:43.807675Z",
+     "iopub.status.idle": "2025-02-04T11:20:46.701715Z",
+     "shell.execute_reply": "2025-02-04T11:20:46.701177Z"
     }
    },
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ccb9f7",
+   "id": "42c8d7e8",
    "metadata": {},
    "source": [
     "The output will now contain three arrays: induced dipole moments, site occupations and full density matrices"
@@ -770,13 +770,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5af9be4a",
+   "id": "aa91d0b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:35.884416Z",
-     "iopub.status.busy": "2025-02-04T10:38:35.884027Z",
-     "iopub.status.idle": "2025-02-04T10:38:35.888023Z",
-     "shell.execute_reply": "2025-02-04T10:38:35.887477Z"
+     "iopub.execute_input": "2025-02-04T11:20:46.703557Z",
+     "iopub.status.busy": "2025-02-04T11:20:46.703327Z",
+     "iopub.status.idle": "2025-02-04T11:20:46.707240Z",
+     "shell.execute_reply": "2025-02-04T11:20:46.706671Z"
     }
    },
    "outputs": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa0f48a",
+   "id": "74c676e9",
    "metadata": {},
    "source": [
     "## EPI"
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e94016df",
+   "id": "d0422544",
    "metadata": {},
    "source": [
     "The energy-based plasmonicity index introduced by [Müller et al.](https://pubs.acs.org/doi/10.1021/acs.jpcc.0c07964) is a quantity to characterize the steady-state plasmonicity. We use plane wave illumination to drive the system into a steady state and then compute the EPI."
@@ -817,13 +817,13 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5a600eec",
+   "id": "9d3cc2eb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T10:38:35.889801Z",
-     "iopub.status.busy": "2025-02-04T10:38:35.889461Z",
-     "iopub.status.idle": "2025-02-04T10:38:38.713606Z",
-     "shell.execute_reply": "2025-02-04T10:38:38.712989Z"
+     "iopub.execute_input": "2025-02-04T11:20:46.709110Z",
+     "iopub.status.busy": "2025-02-04T11:20:46.708777Z",
+     "iopub.status.idle": "2025-02-04T11:20:49.542199Z",
+     "shell.execute_reply": "2025-02-04T11:20:49.541603Z"
     }
    },
    "outputs": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e3d93eb",
+   "id": "7332b598",
    "metadata": {},
    "source": [
     "<div style=\"\n",
@@ -889,7 +889,7 @@
     "\">\n",
     "<b>Important Note:</b> The <code>diffrax</code> solver adjusts the simulation parameters automatically \n",
     "depending on the initial values of physical parameters. Running stable calculations might require \n",
-    "some fine-tuning. Example scripts providing working setups are provided here.\n",
+    "some fine-tuning. Example scripts providing working setups are provided [here](https://github.com/GRANADlauncher/granad/tree/main/docs_src/Time_Domain_Simulations).\n",
     "</div>"
    ]
   }
